platform/envoy-gateway/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: internal-envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: internal-proxy-config
    namespace: envoy-gateway-system

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-beaver-cloud
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  gatewayClassName: internal-envoy-gateway
  addresses:
    - type: IPAddress
      value: 192.168.42.4
  listeners:
    # - name: http
    #   protocol: HTTP
    #   port: 80
    #   allowedRoutes:
    #     kinds:
    #       - kind: HTTPRoute
    #         group: gateway.networking.k8s.io
    #     namespaces:
    #       from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.beaver-cloud.xyz'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: wildcard.beaver-cloud.xyz
