platform/envoy-gateway/https-redirect.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-beaver-cloud
      namespace: envoy-gateway-system
      sectionName: http
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-beaver-cloud
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - '*.beaver-cloud.xyz'
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
